# R432

./: .gitmodules  README.md  generate_all.sh  manual.md  modulepack.build.conf  modulepack.ilfuzz.conf  modulepack.plot.conf  r4.build.modulepack  r4.ilfuzz.modulepack  r4.plot.modulepack
.github/: dist.sh
examples/: Main.hpp  R3Term.hpp  R4Term.hpp  README.md  Runtime.c  Start.S  common.ld  meson.build  toolchain.ini
examples/Echo/: Hardware.hpp  Hardware.ld  Main.cpp
examples/Hardware/: FiltInput.hpp  FiltOutput.hpp  FrameClock.hpp  InstInput.hpp  InstOutput.hpp  RandomSource.hpp  Terminal.hpp
examples/Primes/: Hardware.hpp  Main.cpp
examples/Programs/Echo/: Main.cpp
examples/Programs/FiltRelay/: Hardware.hpp  Hardware.ld  Main.cpp
examples/Programs/HiAddrTest/: Hardware.ld  Main.cpp
examples/Programs/Primes/: Hardware.hpp  Hardware.ld  Main.cpp
examples/Runtime/: Runtime.c
r4/: build.lua  check.lua  common.lua  disassembler.lua  emulator.lua  ilfuzz.lua  plot.lua
r4/comp/: common.lua  filt_input.lua  filt_output.lua  frame_clock.lua  inst_input.lua  inst_output.lua  random_source.lua  stack_31_1.lua
r4/comp/bus/: r3_adapter.lua  read_tap.lua  termination.lua  write_tap.lua
r4/comp/cpu/: common.lua  init.lua
r4/comp/cpu/alu/: adder.lua  bitwise.lua  imm12s.lua  init.lua  shifter.lua
r4/comp/cpu/bus_control/: generated.lua  init.lua
r4/comp/cpu/core/: address.lua  cbranch.lua  generated_head.lua  generated_tail.lua  head.lua  incr32.lua  incr_pc.lua  instr_split.lua  internal_writer.lua  regs.lua  tail.lua  unit.lua
r4/comp/cpu/core/alu/: .gitattributes  adder.lua  bitwise.lua  generated_multiplier.lua  imm12s.lua  init.lua  multiplier.lua  shifter.lua
r4/comp/cpu/decoder/: regs.lua
r4/comp/cpu/memory_rw/: generated.lua  init.lua
r4/comp/cpu/reg_r/: generated.lua  init.lua
r4/comp/terminal/: extra_keys.lua  font.lua  init.lua
r4/comp/terminal/core/: generated_keyboard.lua  generated_screen.lua  keyboard.lua  screen.lua
showcase/: Common.ld  Hardware.hpp  Hardware.ld  Main.cpp  Menu.cpp  Menu.hpp  Print.cpp  Print.hpp  README.md  Time.cpp  Time.hpp  meson.build
showcase/Demos/: Echo.cpp  Echo.hpp  FiltRelay.cpp  FiltRelay.hpp  FrameClock.cpp  FrameClock.hpp  InstRelay.cpp  InstRelay.hpp  RandomSource.cpp  RandomSource.hpp
showcase/Hardware/: FiltInput.hpp  FiltOutput.hpp  FrameClock.hpp  InstInput.hpp  InstOutput.hpp  RandomSource.hpp  Terminal.hpp
